# exchange-spam-notifier

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
